# haskellbook-berlin

./: .gitignore  .travis-push-gh-pages.sh  .travis.yml  CF-draft.txt  README.md  deploy.sh  hal2016-website.cabal  haskellbook-berlin.cabal  index.html  index.markdown  program.markdown  site.hs  travis-deploy-key.enc
css/: default.css  hk-pyg.css
css/fonts/: lmmono10-italic-demo.html  lmmono10-regular-demo.html  lmmonolt10-bold-demo.html  utopia-italic-demo.html  utopia-italic-webfont.eot  utopia-regular-webfont.eot
session-notes/: 06_TypeClasses.hs  07_FunctionalPatterns.hs  08_Recursion.hs  09_Lists.hs  10_Folding.hs  11_AlgDataTypes.hs  11_Folding_a_Tree.hs  12_SignallingAdversity.hs
session-notes/13_Building/: Building.cabal  README.md  stack.yaml
session-notes/13_Building/app/: Main.hs
session-notes/13_Building/src/: Hello.hs
session-notes/14_Testing/: README.md  Testing.cabal
session-notes/14_Testing/src/: Lib.hs  SimpleCheck.hs
session-notes/Marathon/gloss-demo/: ghci-session.txt  gloss-demo.cabal
session-notes/Testing/: LICENSE  Testing.cabal
session-notes/Testing/src/: Lib.hs
session-notes/Testing/test/: Spec.hs
templates/: default.html
