name:               haskellbook-berlin
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable haskellbook-berlin
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.8.*
                  , pandoc
  ghc-options:      -threaded
  default-language: Haskell2010
