name:                Building
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://meetup.com/berlinhug
license:             BSD3
license-file:        LICENSE
author:              Matthias Heinzel
maintainer:          mheinzel@posteo.de
copyright:           2016 Matthias Heinzel
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hello
  build-depends:       base >= 4.7 && < 5
                     , cryptonite
                     , bytestring
  default-language:    Haskell2010

executable sayhello
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Building
  default-language:    Haskell2010

test-suite Building-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Building
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
