name:                gloss-demo
version:             0.1.0.0
synopsis:            A quick demo of gloss
description:         Just showing some quick examples
homepage:            https://github.com/lwm/haskellbook-berlin
license:             BSD3
license-file:        LICENSE
author:              Matthias Heinzel
maintainer:          mheinzel@posteo.de
copyright:           2016 Matthias Heinzel
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , gloss
  default-language:    Haskell2010

executable gloss-demo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gloss-demo
  default-language:    Haskell2010

test-suite gloss-demo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gloss-demo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lwm/haskellbook-berlin
